# inkstone

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.tsx  types.ts
apps/web/src/api/: client.ts
apps/web/src/components/: DocList.tsx  GraphPanel.tsx  InkBlock.tsx  WorkspaceList.tsx
apps/web/src/editor/: MarkdownEditor.tsx  sync.ts
crates/inkstone-core/: Cargo.toml
crates/inkstone-core/src/: crypto_types.rs  graph.rs  ids.rs  ink.rs  lib.rs  markdown.rs  protocol.rs
crates/inkstone-server/: Cargo.toml
crates/inkstone-server/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
crates/inkstone-server/src/db/: mod.rs  models.rs
crates/inkstone-server/src/routes/: docs.rs  health.rs  mod.rs  sync.rs  workspaces.rs
crates/inkstone-server/src/sync/: mod.rs  protocol.rs  rooms.rs
crates/inkstone-server/tests/: integration.rs  websocket.rs
crates/inkstone-server/tests/common/: mod.rs
migrations/: 0001_init.sql
scripts/: run-tests.sh  start-dev.sh
